# PITOS

./: .gitignore  LICENSE  README.md  run_pitos.R  run_pitos.py  validate_packages.jl
julia/PITOS/src/: PITOS.jl
python/PITOS/: pyproject.toml
python/PITOS/src/pitos/: __init__.py  core.py
python/PITOS/tests/: test_core.py
r/PITOS/: DESCRIPTION  NAMESPACE
r/PITOS/R/: pitos.R
r/PITOS/man/: generate_weighted_halton_sequence.Rd  pitos.Rd
r/PITOS/tests/: testthat.R
r/PITOS/tests/testthat/: test-pitos.R
